deploy/demo-game/overlays/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-game
  labels:
    app: demo-game
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: demo-game
  type: ClusterIP
